# gsplines_cpp

./: .clang-format  .clang-tidy  .gitattribute  .gitattributes  .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  CTestConfig.cmake  LICENSE.txt  README.md  lagrange_neville.cpp  setup_python_env.in  setup_python_env.in.py  test.cpp  test2.cpp  uml_proposal.txt
.github/workflows/: build.yml
bindings/: bindings.cpp  pybasis.cpp  pybasis.hpp  pyfunctions.cpp  pyfunctions.hpp
cmake/: GSplinesConfig.cmake  GSplinesConfig.cmake.in
docker/: build_image.bash  build_image.bat  build_image.sh  container-start.bash  container-start.bat  docker.dockerfile  galactic.dockerfile  image.dockerfile  melodic.dockerfile  noetic.dockerfile  ubuntu22.04.dockerfile  vim_cpp_gsplines.dockerfile  vim_installation.bash  vim_ros_melodic_gsplines.dockerfile  vim_ros_noetic_gsplines.dockerfile
docker/configfiles/: bashrc  ctags  screenrc  vimrc  ycm_extra_conf.py
examples/python/: demostrator.py  kdl.py  load_yaml.py  message.yaml  plane_example.py  ruckig.py  use_interpolator.py
include/gsplines/: Basis.hpp  BasisLagrange.hpp  BasisLegendre.hpp  GSpline.hpp  Interpolator.hpp  PiecewiseFunction.hpp  Sobolev.hpp  SumOfFunctions.hpp  Tools.hpp  ipopt_interface.hpp  ipopt_solver.hpp
include/gsplines++/: Basis.hpp  BasisLagrange.hpp  BasisLegendre.hpp  Interpolator.hpp  PiecewiseFunction.hpp  Sobolev.hpp  SumOfFunctions.hpp  basis.hpp  basis0010.hpp  interpolator.hpp  ipopt_interface.hpp  ipopt_solver.hpp  piecewise_function.hpp  pybasis.cpp
include/gsplines++/Functions/: ElementalFunctions.hpp  Function.hpp  FunctionBase.hpp  FunctionExpression.hpp  Functions.hpp  FunctionsComp.hpp  FunctionsConcat.hpp  FunctionsMul.hpp  FunctionsSum.hpp  PiecewiseFunction.hpp
include/gsplines/Basis/: Basis.hpp  Basis0101.hpp  Basis1010.hpp  BasisLagrange.hpp  BasisLegendre.hpp
include/gsplines/Collocation/: GaussLobattoLagrange.hpp  GaussLobattoLagrangeFunctionals.hpp  GaussLobattoPointsWeights.hpp
include/gsplines/FunctionalAnalysis/: Integral.hpp  Sobolev.hpp
include/gsplines/Functions/: Domain.hpp  DomainInheritanceHelper.hpp  ElementalFunctions.hpp  Function.hpp  FunctionBase.hpp  FunctionExpression.hpp  FunctionInheritanceHelper.hpp  FunctionsComp.hpp  FunctionsConcat.hpp  FunctionsMul.hpp  FunctionsSum.hpp  Interval.hpp  PiecewiseFunction.hpp
include/gsplines/Manifolds/: HankelMatrix.hpp  Manifold.hpp  Manifolds.hpp  MatrixExponential.hpp  PositiveDefiniteMatrix.hpp  SymmetricMatrix.hpp
include/gsplines/Optimization/: ipopt_interface.hpp  ipopt_solver.hpp
include/gsplines/Ruckig/: Ruckig.hpp
include/gsplines/kdl/: kdl.hpp
python/gsplines/: __init__.py  serialization.py
python/gsplines/plot/: LinesContainer.py  plot.py
src/: Basis.cpp  BasisLagrange.cpp  BasisLegendre.cpp  GSpline.cpp  Interpolator.cpp  PiecewiseFunction.cpp  Sobolev.cpp  Tools.cpp  basis.hpp  basis0010.cpp  basis0010.hpp  interpolator.cpp  ipopt_interface.cpp  ipopt_solver.cpp  legendre_tools.hpp  piecewise_function.cpp  test.cpp
src/Basis/: Basis.cpp  Basis0101.cpp  Basis1010.cpp  BasisLagrange.cpp  BasisLegendre.cpp
src/Collocation/: GaussLobattoLagrange.cpp  GaussLobattoLagrangeFunctionals.cpp  GaussLobattoPointsWeights.cpp
src/FunctionalAnalysis/: Integral.cpp  Sobolev.cpp
src/Functions/: ElementalFunctions.cpp  FunctionBase.cpp  FunctionExpression.cpp  FunctionGenericOperations.cpp  FunctionMul.cpp  FunctionSum.cpp  Functions.cpp  FunctionsComp.cpp  FunctionsConcat.cpp
src/Manifolds/: MatrixExponential.cpp
src/Optimization/: ipopt_interface.cpp  ipopt_solver.cpp
src/Ruckig/: Ruckig.cpp
src/kdl/: kdl.cpp
tests/: CMakeLists.txt  DartConfiguration.tcl  basis.cpp  basis0010.cpp  basis_0101.cpp  basis_lagrange.cpp  basis_lagrange.py  basis_legendre.cpp  basis_legendre.py  basis_map.cpp  collocation.cpp  continuity_matrix.cpp  derivative_matrix.cpp  dot_product.py  elemental_functions.cpp  elemental_functions.py  function_composition.cpp  function_concatenation.cpp  function_concatenation.py  functions.cpp  gll_spline.cpp  gspline.py  interpolator.cpp  interpolator.py  ipopt.cpp  ipopt.py  kdl.cpp  l2norm.py  legendre_gauss_lobatto.py  linear_scaling.cpp  matrix_exponential.cpp  matrix_exponential.py  ruckig.cpp  serialization.py  sobolev.py  test_tools.h  tools.py
